added header to index.html and style in style.css

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ html {
   img {
     height: auto;
   }
+  header{
+    font-family: courier new, monospace;
+  }
   /* burger menu */
   #div-burger-container {
     display: flex;
