--- a/sammy/style.css
+++ b/sammy/style.css
@@ -1,11 +1,50 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-}
+body .flip_card_front, body .flip_card_back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background: #222222;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 12px; }
 
-.helloMessage{
-    font-size: 2.25rem;
-}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  background: url("./61f52086e2055.jpg"); }
+  body .flip {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    perspective: 1000px;
+    width: 250px;
+    height: 350px; }
+    body .flip_card {
+      width: 100%;
+      height: 100%;
+      transform-style: preserve-3d;
+      transition: all 0.7s ease;
+      position: relative;
+      box-shadow: 0px 0px 6px 2px #ffffff50;
+      border-radius: 12px;
+      color: white; }
+      body .flip_card:hover {
+        transform: rotateY(180deg); }
+      body .flip_card_front_photo {
+        background-image: url("./bestBoi.jpeg");
+        width: 150px;
+        height: 150px;
+        background-size: cover;
+        background-position: center;
+        border-radius: 50%;
+        margin-bottom: 10px; }
+      body .flip_card_back {
+        transform: rotateY(180deg); }
+
+/*# sourceMappingURL=style.css.map */
