--- a/style.css
+++ b/style.css
@@ -13,6 +13,20 @@ html {
   img {
     height: auto;
   }
+
+  /* header */
+
+  header{
+    background: #000;
+    padding: 40px;
+  }
+
+  h1{
+    font-family: 'Courier New', monospace;
+    color: #fff;
+    line-height:1.5;    
+  }
+
   /* burger menu */
   #div-burger-container {
     display: flex;
@@ -107,6 +121,34 @@ li {
   0% {transform: translateX(0%);}
   100% {transform: translateX(-100%);}
 }
+
+/* main / sections */
+
+main{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+section{
+  width: 250px;
+  height: 150px;
+  margin: 40px 20px;
+  border: 4px solid #000;
+  display: flex;
+}
+
+section a, section a:visited{
+  font-family: 'Courier New', monospace;
+  font-weight: bold;
+  color:#000;
+  margin: auto;
+  font-size: 2em;
+}
+
+
+
 /* media queries */
 @media (min-width: 720px){
   #div-burger-container {
