Style-the-menu-in-index #comment changed js Query selector, merged conflicts

--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ li {
     border-radius: 15px;
     background-color: #fff;
 }
-
+// header.burger_menu
 header {
     display: flex;
     flex-direction: column;
